# TECH_CHALLENGE_FASE_2

./: .gitignore  Projeto_IBOVESPA.ipynb  README.md  pyproject.toml
